fixed buttons not showing in safari bug

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,7 +39,3 @@ button:hover {
     color: white;
     cursor: pointer;
 }
-
-.buttons {
-    text-align: center;
-}
