--- a/static/css/breathing.css
+++ b/static/css/breathing.css
@@ -32,8 +32,8 @@
 }
 
 .buttons {
-    margin-top: 65vh;
-    position: absolute;
+    margin-top: 12%;
+    position: relative;
 }
 
 #second-line {
